--- a/main.css
+++ b/main.css
@@ -1,20 +1,100 @@
 * {
-	box-sizing: border-box;
-	padding: 0;
-	margin: 0;
+  box-sizing: border-box;
+  padding: 0;
+  margin: 0;
 }
 body {
-	font-family: sans-serif;
+  font-family: sans-serif;
 }
 ol,
 ul,
 input,
 button,
 a {
-	list-style: none;
-	border: none;
-	outline: none;
-	text-decoration: none;
+  list-style: none;
+  border: none;
+  outline: none;
+  text-decoration: none;
 }
 
 /* Login page styles */
+.login {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 30px;
+  height: 100vh;
+  background-image: url(./imgs/Background.png);
+  background-repeat: no-repeat;
+  background-size: cover;
+  padding-top: 111px;
+}
+.login_user_img {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 10px;
+}
+#myimage {
+  display: none;
+  border: 2px solid #ccc;
+  border-radius: 50%;
+  width: 124px;
+  height: 124px;
+  cursor: pointer;
+  margin-bottom: 2px;
+  margin: auto;
+}
+.login_user_title {
+  margin-bottom: 100px;
+  text-align: center;
+  font-size: 14px;
+  color: white;
+  letter-spacing: 1px;
+  text-transform: uppercase;
+}
+.myimage_none {
+  display: none !important;
+}
+
+/* Login btns */
+.login_pin {
+  text-align: center;
+  border: none !important;
+  background: none;
+  background-color: transparent;
+  font-size: 20px;
+  color: gray;
+  font-weight: 700;
+}
+.login_btns_wrpaer {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
+
+.login_btns button {
+  cursor: pointer;
+  width: 100px;
+  font-size: 20px;
+  height: 60px;
+  border-radius: 160px;
+  color: white;
+  border: 1px solid rgba(255, 255, 255, 0.24);
+  background: rgba(67, 67, 67, 0.1);
+  backdrop-filter: blur(16px);
+}
+.login_btns button:hover {
+  backdrop-filter: blur(10px);
+}
+.login_btns_unlock {
+  border-radius: 54px;
+  height: 48px;
+  background: rgba(255, 92, 0, 1);
+  color: white;
+  cursor: pointer;
+}
+.login_btns_unlock:hover {
+  opacity: 0.9;
+  transition: all ease-in-out;
+}
