--- a/main.css
+++ b/main.css
@@ -170,11 +170,13 @@ a {
 /* main sidebar left   */
 .sidebar_left {
   width: 125px;
-  padding: 24px;
+  padding-top: 24px;
+  padding-left: 24px;
+  padding-right: 24px;
   display: flex;
   flex-direction: column;
   align-items: start;
-  gap: 12px;
+  gap: 30px;
   border-right: 1px solid rgba(228, 228, 228, 1) !important;
   height: 100%;
 }
