--- a/main.css
+++ b/main.css
@@ -307,7 +307,7 @@ a {
 
 /* dropdown */
 .dropdown {
-  margin-top:15px ;
+  margin-top: 15px;
   border-bottom: 1px solid rgba(228, 228, 228, 1) !important;
   padding: 30px 24px 28px 24px;
 }
@@ -345,12 +345,53 @@ a {
   border-left: 1px solid rgba(228, 228, 228, 1);
   background: rgba(255, 255, 255, 1);
 }
-.sidebar_right_bottom{
+.sidebar_right_bottom {
   display: flex;
   justify-content: center;
   align-items: center;
   height: 100%;
 }
+
+/* order */
+
+.order {
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  gap: 30px;
+
+}
+.order_card {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background: rgba(255, 255, 255, 1);
+  width: Fixed (219px) px;
+  height: Hug (250px) px;
+  padding: 12px 8px 16px 8px;
+  gap: 12px;
+  border-radius: 16px;
+}
+.order_card_img {
+  object-fit: cover;
+  width: 100%;
+}
+.order_card_title {
+  font-size: 16px;
+  font-weight: 600;
+  line-height: 24px;
+}
+.order_card_price {
+  font-size: 16px;
+  font-weight: 600;
+  line-height: 24px;
+  color: var(--primary-color-orange);
+}
+.order_main{
+  overflow-y: scroll;
+  margin-bottom: 50px;
+}
+
 /* media  */
 @media screen and (max-width: 1130px) {
   .main_outlet-search {
@@ -362,7 +403,7 @@ a {
   .main_outlet-btn {
     gap: 10px;
   }
-  .main_outlet_center{
+  .main_outlet_center {
     padding: 12px 18px;
   }
   .main_outlet-btn a {
@@ -381,7 +422,6 @@ a {
   }
   .main_outlet_top-text span {
     font-size: 14px;
- 
   }
 }
 @media screen and (max-width: 1050px) {
