--- a/main.css
+++ b/main.css
@@ -625,6 +625,239 @@ a {
   gap: 30px;
 }
 
+/* booking >>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>*/
+
+.booking-rigth-sidebar {
+  width: 360px;
+  background: #f8f9fd;
+}
+.bookin-dropdown {
+  margin: 0 !important;
+  padding: 0 !important;
+  padding: 36px 20px !important;
+  background-color: rgba(255, 255, 255, 1) !important;
+}
+.bookin-dropdown .toggle-btn {
+  font-size: 12px;
+}
+
+/* reservation panel --------------------------------------------------------------------------------------------------------------------------*/
+.reservation-panel {
+  position: absolute;
+  z-index: 99;
+  backdrop-filter: blur(2px);
+  left: 0;
+  top: 0;
+  display: none;
+  height: 100%;
+  width: 100%;
+}
+.reservation-panel_wrapper-modal {
+  display: flex;
+  justify-content: end;
+  height: 100%;
+}
+.reservation-panel_wrapper {
+  transform: translateX(600px); /* To'g'ri yo'nalish */
+  transition: transform 2s ease-in-out; /* Silliq animatsiya */
+  background: rgba(255, 255, 255, 1);
+  width: 603px;
+  padding: 30px 24px;
+} 
+.reservation-header {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 50px;
+}
+.reservation-header span {
+  color: var(--primary-color-gray);
+  font-size: 20px;
+}
+input[type="date"] {
+  background: transparent;
+}
+input[type="date"]::-webkit-datetime-edit-text {
+  display: none !important;
+}
+input[type="date"]::-webkit-datetime-edit-month-field {
+  display: none;
+}
+input[type="date"]::-webkit-datetime-edit-day-field {
+  display: none;
+}
+input[type="date"]::-webkit-datetime-edit-year-field {
+  display: none;
+}
+input[type="date"]::-webkit-calendar-picker-indicator {
+  cursor: pointer;
+  font-size: 40px;
+}
+
+.reservation-body-list {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  overflow-y: scroll;
+  height: 80%;
+}
+.reservation-body-list-item-th {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding-bottom: 10px;
+  border-bottom: 1px solid var(--primary-color-gray);
+}
+.reservation-body-list-item-th span {
+  color: var(--primary-color-gray);
+  font-size: 15px;
+  text-transform: uppercase;
+}
+.reservation-body-list-item {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  text-transform: capitalize;
+  border-bottom: 1px solid var(--primary-color-gray);
+  padding-bottom: 10px;
+}
+.reservation-body-list-item-user {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.add-reservation-btn {
+  width: 554px;
+  display: block;
+  margin: 0 auto !important;
+  height: 48px;
+  padding: 12px;
+  border-radius: 58px;
+  color: white;
+  background-color: var(--primary-color-orange);
+  font-size: 18px;
+  cursor: pointer;
+  position: fixed;
+  bottom: 20px;
+}
+
+/* new reservation -------------------------------------------------------------------------------------------------------------- */
+
+.new_reservation {
+  width: 631px;
+  display: none;
+  top: 186px;
+  left: 382px;
+  border-radius: 16px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  background: rgba(255, 255, 255, 1);
+  transform: translate(-50%, -50%);
+}
+.new_reservation_header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 24px;
+  border-bottom: 1px solid var(--primary-color-gray);
+}
+.new_reservation_header p {
+  font-size: 20px;
+  font-weight: 600;
+  line-height: 30px;
+  color: rgba(25, 25, 28, 1);
+}
+.new_reservation_header span {
+  cursor: pointer;
+  color: rgba(40, 41, 48, 1);
+  font-size: 16px;
+}
+.new_reservation_form {
+  padding: 24px;
+}
+.new_reservation_form span {
+  font-size: 12px;
+  font-weight: 500;
+  line-height: 18px;
+  color: var(--primary-color-gray);
+}
+.new_reservation_form-fullname {
+  display: flex;
+  flex-direction: column;
+  gap: 3px;
+  width: 100%;
+}
+
+.new_reservation_form-fullname input {
+  width: 100%;
+  background: rgba(255, 255, 255, 1);
+  padding: 12px 16px 12px 16px;
+  border-radius: 58px;
+  border: 1px solid var(--primary-color-gray);
+  color: var(--primary-color-gray);
+}
+
+.new_reservation_form_wrapper {
+  margin-top: 24px;
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+  gap: 30px;
+}
+.new_reservation_form_email {
+  display: flex;
+  flex-direction: column;
+  gap: 3px;
+  width: 50%;
+}
+.new_reservation_form_email input {
+  width: 100%;
+  background: rgba(255, 255, 255, 1);
+  padding: 12px 16px 12px 16px;
+  border-radius: 58px;
+  border: 1px solid var(--primary-color-gray);
+  color: var(--primary-color-gray);
+}
+table {
+  border-collapse: collapse;
+  width: 100%;
+  text-align: center;
+}
+td {
+  padding: 10px 0;
+}
+
+table p {
+  font-size: 16px;
+  font-weight: 600;
+  line-height: 24px;
+  color: rgba(25, 25, 28, 1) !important;
+}
+table span {
+  font-size: 12px;
+  font-weight: 500;
+  line-height: 18px;
+  color: var(--primary-color-gray);
+}
+.new_reservation_table {
+  padding: 0 24px;
+}
+.new_reservation_table p {
+  color: var(--primary-color-gray);
+  margin-bottom: 5px;
+}
+
+.new_reservation-btn {
+  padding: 24px;
+  display: flex;
+  justify-content: space-between;
+  gap: 30px;
+}
+.new_reservation-btn_cancel {
+  width: 50% !important;
+}
 
 /* media  */
 @media screen and (max-width: 1130px) {
